# BMSTU-4th-Sem

./: README.md
Algorithms/LABORATORY#2/: build.gradle
Algorithms/LABORATORY#4/: lab_04.py  table.txt
Algorithms/LABORATORY#6/: main.py
Computer Graphics/: README.md
Computer Graphics/labWork1/: README.md  build.gradle
Computer Graphics/labWork10/: build.gradle  chaushevakiu7-46b_kg10.docx
Computer Graphics/labWork2/: README.md  build.gradle  settings.gradle
Computer Graphics/labWork3/: README.md  settings.gradle
Computer Graphics/labWork4/: README.md  build.gradle
Computer Graphics/labWork5/: chaushevakiu7-46b_kg5.docx
Computer Graphics/labWork6/: chaushevakiu7-46b_kg6.docx  kg6.pro  mainwindow.cpp  mainwindow.ui  paintwidget.cpp
Computer Graphics/labWork7/: chaushevakiu7-46b_kg7.docx  lr7.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Computer Graphics/labWork8/: algorithm.cpp  algorithm.h  chaushevakiu7-46b_kg8.docx  lr8.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Computer Graphics/labWork9/: chaushevakiu7-46b_kg9.docx  lab_09.py  mainwindow.ui
MDPL/lab2_1/: Loop.asm  (+2 more)
Object-Oriented-Programming(C++)/: README.md
Object-Oriented-Programming(C++)/lab_01/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
Object-Oriented-Programming(C++)/lab_01/controller/: MainController.cpp  MainController.h
Object-Oriented-Programming(C++)/lab_01/controller/actions/: actions.cpp  actions.h
Object-Oriented-Programming(C++)/lab_01/exceptionhandling/: Error.cpp  Error.h
Object-Oriented-Programming(C++)/lab_01/geometry/: Edge.cpp  Edge.h  Point.cpp  Point.h
Object-Oriented-Programming(C++)/lab_01/geometry/models/: Model3d.cpp  Model3d.h
Object-Oriented-Programming(C++)/lab_01/io/: StreamReader.cpp  StreamReader.h
Object-Oriented-Programming(C++)/lab_01/resources/: 1.txt  2.txt
Object-Oriented-Programming(C++)/lab_01/ui/: Drawer.cpp  Drawer.h
Object-Oriented-Programming(C++)/lab_02/: CMakeLists.txt  main.cpp
Object-Oriented-Programming(C++)/lab_02/mathvector/exception/: Error.h  Error.hpp
Object-Oriented-Programming(C++)/lab_02/mathvector/iterator/: BaseIterator.h  BaseIterator.hpp  Iterator.h  Iterator.hpp
Object-Oriented-Programming(C++)/lab_02/mathvector/vector/: Container.h  Container.hpp  MathVector.h  MathVector.hpp
Object-Oriented-Programming(C++)/lab_04/: CMakeLists.txt  StateDiagram.drawio  delay.cpp  delay.h  doors.cpp  doors.h  error.h  lab_04.pro  lift.cpp  lift.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+93 files in other folders)
